Fix coupon code view

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 <div class="product-details">
                     <div class="product-info">
                         <div class="product-name"><strong>Oranges</strong></div>
-                        <div class="product-price">$1.25</div>
+                        <div class="product-price">$0.00</div>
                         <div class="product-coupon-container">
-                            <select class="product-coupon">
+                            <label for="product-coupons"  class="hidden">Coupon: </label>
+                            <select class="product-coupons">
                                 <option>N/A</option>
                             </select>
                         </div>
@@ -55,9 +56,10 @@
                 <div class="product-details">
                     <div class="product-info">
                         <div class="product-name"><strong>Apples</strong></div>
-                        <div class="product-price">$1.25</div>
+                        <div class="product-price">$0.00</div>
                         <div class="product-coupon-container">
-                            <select class="product-coupon">
+                            <label for="product-coupons" class="hidden">Coupon: </label>
+                            <select class="product-coupons">
                                 <option>N/A</option>
                             </select>
                         </div>
@@ -85,9 +87,10 @@
                 <div class="product-details">
                     <div class="product-info">
                         <div class="product-name"><strong>Pears</strong></div>
-                        <div class="product-price">$1.25</div>
+                        <div class="product-price">$0.00</div>
                         <div class="product-coupon-container">
-                            <select class="product-coupon">
+                            <label for="product-coupons" class="hidden">Coupon: </label>
+                            <select class="product-coupons">
                                 <option>N/A</option>
                             </select>
                         </div>
