--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
                 <div class="product-details">
                     <div class="product-info">
                         <div class="product-name"><strong>Pears</strong></div>
-                        <div class="product-price">$0.00</div>
+                        <div class="price-container">
+                            <div class="product-price">$0.00</div>
+                            <div class="product-price-discounted hidden">$0.00</div>
+                        </div>
                         <div class="product-coupon-container">
                             <label for="product-coupons" class="hidden">Coupon: </label>
                             <select class="product-coupons">
@@ -102,6 +105,7 @@
                                 <div class="button-group">
                                     <button class="decrease-quantity">-</button>
                                     <span class="quantity">1</span>
+                                    <span class="free-items hidden">0</span>
                                     <button class="increase-quantity">+</button>
                                 </div>
                                 <button class="remove-item"><img src="images/bin.svg" /></button>
