--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <article class="product oranges">
                 <div class="product-image-container">
                     <img src="images/orange.png" alt="Apples" class="product-image">
+                    <div class="unit-price">$0.00</div>
                 </div>
                 <div class="product-details">
                     <div class="product-info">
@@ -56,6 +57,7 @@
             <article class="product apples">
                 <div class="product-image-container">
                     <img src="images/apple.png" alt="Apples" class="product-image">
+                    <div class="unit-price">$0.00</div>
                 </div>
                 <div class="product-details">
                     <div class="product-info">
@@ -91,6 +93,7 @@
             <article class="product pears">
                 <div class="product-image-container">
                     <img src="images/pear.png" alt="Apples" class="product-image">
+                    <div class="unit-price">$0.00</div>
                 </div>
                 <div class="product-details">
                     <div class="product-info">
