Show coupons by default

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <div class="product-price-discounted hidden">$0.00</div>
                         </div>
                         <div class="product-coupon-container">
-                            <label for="product-coupons" class="hidden">Coupon: </label>
+                            <label for="product-coupons"> Available Coupons: </label>
                             <select class="product-coupons">
                                 <option>N/A</option>
                             </select>
@@ -67,7 +67,7 @@
                             <div class="product-price-discounted hidden">$0.00</div>
                         </div>
                         <div class="product-coupon-container">
-                            <label for="product-coupons" class="hidden">Coupon: </label>
+                            <label for="product-coupons"> Available Coupons: </label>
                             <select class="product-coupons">
                                 <option>N/A</option>
                             </select>
@@ -103,9 +103,9 @@
                             <div class="product-price-discounted hidden">$0.00</div>
                         </div>
                         <div class="product-coupon-container">
-                            <label for="product-coupons" class="hidden">Coupon: </label>
+                            <label for="product-coupons"> Available Coupons: </label>
                             <select class="product-coupons">
-                                <option>N/A</option>
+                                <option className="coupon-select-placeholder">N/A</option>
                             </select>
                         </div>
                     </div>
