Final touch ups

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <div class="product-price-discounted hidden">$0.00</div>
                         </div>
                         <div class="product-coupon-container">
-                            <label for="product-coupons"> Available Coupons: </label>
+                            <label for="product-coupons"> Coupons: </label>
                             <select class="product-coupons">
                                 <option>N/A</option>
                             </select>
@@ -67,7 +67,7 @@
                             <div class="product-price-discounted hidden">$0.00</div>
                         </div>
                         <div class="product-coupon-container">
-                            <label for="product-coupons"> Available Coupons: </label>
+                            <label for="product-coupons"> Coupons: </label>
                             <select class="product-coupons">
                                 <option>N/A</option>
                             </select>
@@ -103,7 +103,7 @@
                             <div class="product-price-discounted hidden">$0.00</div>
                         </div>
                         <div class="product-coupon-container">
-                            <label for="product-coupons"> Available Coupons: </label>
+                            <label for="product-coupons"> Coupons: </label>
                             <select class="product-coupons">
                                 <option className="coupon-select-placeholder">N/A</option>
                             </select>
@@ -116,8 +116,7 @@
                                 <div class="button-group">
                                     <button class="decrease-quantity">-</button>
                                     <span class="quantity">1</span>
-                                    <span class="free-items hidden">0</span>
-                                    <button class="increase-quantity">+</button>
+                                   <button class="increase-quantity">+</button>
                                 </div>
                                 <button class="remove-item"><img src="images/bin.svg" /></button>
                             </div>
